# TKOM_Interpreter

./: CMakeLists.txt  README.md  main.cpp  test.txt  test2.txt  test_parser.txt
exception/: Exception.h  ExecutionException.h  GeoException.h  LexerException.h  ParserException.h
execution/: Context.cpp  Context.h  Function.h  PrintFunction.h  VisitCheckType.h  VisitCondition.h  VisitNegate.h  VisitOperations.h  VisitPrint.h
include/: Lexer.h  Node.h  Parser.h  Source.h  StatementNode.h  Token.h  WhileNode.h
lexer/: FileSource.cpp  FileSource.h  Lexer.cpp  Lexer.h  Source.cpp  Source.h  StringSource.cpp  StringSource.h  Token.cpp  Token.h  TokenType.h
parser/: Node.cpp  Node.h  Parser.cpp  Parser.h
parser/ast/: AddExpresionNode.h  AddExpressionNode.cpp  AddExpressionNode.h  ArgumentsNode.cpp  ArgumentsNode.h  AssignmentNode.cpp  AssignmentNode.h  DeclarationNode.cpp  DeclarationNode.h  ExpressionNode.cpp  ExpressionNode.h  FactorNode.cpp  FactorNode.h  FunctionCallNode.cpp  FunctionCallNode.h  FunctionNode.cpp  FunctionNode.h  GeographicalCoordinate.h  IfStatementNode.cpp  IfStatementNode.h  MultExpressionNode.cpp  MultExpressionNode.h  Node.h  ParametersNode.cpp  ParametersNode.h  ProgramNode.cpp  ProgramNode.h  ReturnStatementNode.cpp  ReturnStatementNode.h  SimpleStatement.h  SimpleStatementNode.cpp  SimpleStatementNode.h  StatementNode.cpp  StatementNode.h  TestNode.h  WhileStatementNode.cpp  WhileStatementNode.h
structures/: GeographicCoordinate.cpp  GeographicCoordinate.h  GeographicDirection.cpp  GeographicDirection.h  GeographicDistance.cpp  GeographicDistance.h  GeographicPosition.cpp  GeographicPosition.h  GeographicalPosition.h
tests/: CMakeLists.txt  CatchTest.cpp  ExecutionTests.cpp  LexerTests.cpp  ParserTests.cpp
